--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mayur</title>
-    
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
+        body {
+            font-family: 'Open Sans', sans-serif;
+            background-color: rgb(181, 181, 181);
+        }
+
+        #profile {
+            background-color: white;
+            border-radius: 25px;
+            text-align: center;
+        }
+      </style>
 </head>
 <body>
     <div id="nav">
 
     </div>
-    <div>
-
+    <div id="profile">
+        <h1>Hello, I am Mayur</h1>
     </div>
 </body>
 </html>
