--- a/index.html
+++ b/index.html
@@ -4,27 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Mayur</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
-        body {
-            font-family: 'Open Sans', sans-serif;
-            background-color: rgb(181, 181, 181);
-        }
-
-        #profile {
-            background-color: white;
-            border-radius: 25px;
-            text-align: center;
-        }
-      </style>
 </head>
 <body>
-    <div id="nav">
-
-    </div>
+    <!--Navbar-->
+    <nav>
+        <a href="#">
+            <p>Mayur</p>
+        </a>
+        <ul>
+            <li><a href="#">About</a></li>
+        </ul>
+    </nav>
+    <!--Profile-->
     <div id="profile">
         <h1>Hello, I am Mayur</h1>
+    </div>
+    <!--Knowledge-->
+    <div id="knowledge">
+        <h1>Java</h1>
+    </div>
+    <!--Skills-->
+    <div id="skills">
+        <h1>Java</h1>
+    </div>
+    <!--Contact-->
+    <div id="contact">
+        <h1>Github</h1>
     </div>
 </body>
 </html>
