--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mayur</title>
 </head>
 <body>
     <!--Navbar-->
     <nav>
-        <a href="#">
+        <a>
             <p>Mayur</p>
         </a>
         <ul>
@@ -19,19 +20,21 @@
     </nav>
     <!--Profile-->
     <div id="profile">
-        <h1>Hello, I am Mayur</h1>
+        <p>Hello World, My name is Mayur</p>
     </div>
     <!--Knowledge-->
     <div id="knowledge">
-        <h1>Java</h1>
+        <h1></h1>
     </div>
     <!--Skills-->
     <div id="skills">
-        <h1>Java</h1>
+        <h1></h1>
     </div>
     <!--Contact-->
     <div id="contact">
-        <h1>Github</h1>
+        <h1>Follow Me Here</h1>
+        <a href="https://github.com/Mayur68">Mayur68</a>
+        <a></a>
     </div>
 </body>
 </html>
