--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/assets/Favicon/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mayur</title>
 </head>
 <body>
     <!--Navbar-->
     <nav>
-        <a>
+        <a href="#">
+            <img src="/assets/favicon/favicon-32x32.png">
             <p>Mayur</p>
         </a>
         <ul>
