--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <!--Navbar-->
     <nav>
         <a href="#">
-            <img src="/assets/favicon/favicon-32x32.png">
-            <p>Mayur</p>
+            <p><img src="/assets/favicon/favicon-32x32.png">Mayur</p>
         </a>
         <ul>
             <li><a href="#">About</a></li>
