--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
     <!--Navbar-->
     <nav>
         <a href="#">
-            <p><img src="/assets/Favicon/favicon-32x32.png">   Mayur</p>
+            <img src="/assets/Favicon/favicon.ico">
+            <p>  Mayur</p>
         </a>
     </nav>
     <!--Profile-->
     <div id="profile">
-        <div class="profile" id="pro-pho"></div>
+        <div id="cover"><div class="profile" id="pro-pho"></div></div>
         <div class="profile" id="intro">
+            <h1>#About Me</h1>
             <p>Hello World, My name is Mayur, I am a BCA student at GFGC Thenkanidiyoor. I'm intrested in coding and solving problems.</p>
         </div>
     </div>
