--- a/index.html
+++ b/index.html
@@ -36,11 +36,26 @@
     </div>
     <!--Knowledge-->
     <div id="knowledge">
-        <h1></h1>
+        <h1>#Languages</h1>
+        <ul>
+            <li>Java</li>
+            <li>C</li>
+            <li>C++</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Java Script</li>
+            <li>C#</li>
+        </ul>
     </div>
     <!--Skills-->
     <div id="skills">
-        <h1></h1>
+        <h1>#Intrested in</h1>
+        <ul>
+            <li>Web Design</li>
+            <li>Back-end</li>
+            <li>Hacking</li>
+            <li>Problem solving</li>
+        </ul>
     </div>
     <!--Contact-->
     <div id="contact">
