--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,50 +19,51 @@
         }
     </style>
 </head>
+
 <body>
     <!--Navbar-->
     <nav>
         <a href="#">
             <img src="/assets/Favicon/favicon.ico">
-            <p>  Mayur</p>
+            <p> Mayur</p>
         </a>
     </nav>
     <!--Profile-->
     <div id="profile">
-        <div id="cover"><div class="profile" id="pro-pho"></div></div>
+        <div id="cover">
+            <div class="profile" id="pro-pho"></div>
+        </div>
         <div class="profile" id="intro">
-            <h1>#About Me</h1>
-            <p>Hello World, My name is Mayur, I am a BCA student at GFGC Thenkanidiyoor. I'm intrested in coding and solving problems.</p>
+            <h3>#About Me</h3>
+            <p>Hello World, My name is Mayur, I am a BCA student at GFGC Thenkanidiyoor. I'm intrested in coding and
+                solving problems.</p>
         </div>
     </div>
     <!--Knowledge-->
     <div id="knowledge">
-        <h1>#Languages</h1>
-        <ul>
-            <li>Java</li>
-            <li>C</li>
-            <li>C++</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Java Script</li>
-            <li>C#</li>
-        </ul>
+        <h3>#Languages</h3>
+        <div>Java</div>
+        <div>C</div>
+        <div>C++</div>
+        <div>HTML</div>
+        <div>CSS</div>
+        <div>Java Script</div>
+        <div>C#</div>
     </div>
     <!--Skills-->
     <div id="skills">
-        <h1>#Intrested in</h1>
-        <ul>
-            <li>Web Design</li>
-            <li>Back-end</li>
-            <li>Hacking</li>
-            <li>Problem solving</li>
-        </ul>
+        <h3>#Intrested in</h3>
+        <div>Web Design</div>
+        <div>Back-end</div>
+        <div>Hacking</div>
+        <div>Problem solving</div>
     </div>
     <!--Contact-->
     <div id="contact">
-        <h1>Follow Me Here</h1>
+        <h3>Follow Me Here</h3>
         <a href="https://github.com/Mayur68">Mayur68</a>
         <a></a>
     </div>
 </body>
+
 </html>
