--- a/index.html
+++ b/index.html
@@ -29,15 +29,9 @@
         </a>
     </nav>
     <!--Profile-->
-    <div id="profile">
-        <div id="cover">
-            <div class="profile" id="pro-pho"></div>
-        </div>
-        <div class="profile" id="intro">
-            <h3>#About Me</h3>
-            <p>Hello World, My name is Mayur, I am a BCA student at GFGC Thenkanidiyoor. I'm intrested in coding and
-                solving problems.</p>
-        </div>
+    <div id="intro">
+        <h3>#About Me</h3>
+        <p>Hello World, My name is Mayur, I am a BCA student at GFGC Thenkanidiyoor. I'm intrested in coding and solving problems.</p>
     </div>
     <!--Knowledge-->
     <div id="knowledge">
