--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="icon" type="image/x-icon" href="/assets/Favicon/favicon.ico">
+
     <title>Mayur</title>
     <style>
         html {
@@ -22,16 +23,17 @@
 
 <body>
     <!--Navbar-->
-    <nav>
+    <header class="menu">
         <a href="#">
             <img src="/assets/Favicon/favicon.ico">
-            <p> Mayur</p>
+            <!--<p> Mayur</p>-->
         </a>
-    </nav>
+    </header>
     <!--Profile-->
     <div id="intro">
         <h3>#About Me</h3>
-        <p>Hello World, My name is Mayur, I am a BCA student at GFGC Thenkanidiyoor. I'm intrested in coding and solving problems.</p>
+        <p>Hello World, My name is Mayur, I am a BCA student at GFGC Thenkanidiyoor. I'm intrested in coding and solving
+            problems.</p>
     </div>
     <!--Knowledge-->
     <div id="knowledge">
