--- a/index.html
+++ b/index.html
@@ -6,58 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animations.css">
     <link rel="icon" type="image/x-icon" href="/assets/Favicon/favicon.ico">
-
     <title>Mayur</title>
-    <style>
-        html {
-            scroll-behavior: smooth;
-        }
-
-        body::-webkit-scrollbar {
-            display: none;
-        }
-    </style>
 </head>
 
 <body>
-    <!--Navbar-->
+    <!--Header-->
     <header class="menu">
         <a href="#">
             <img src="/assets/Favicon/favicon.ico">
-            <!--<p> Mayur</p>-->
         </a>
     </header>
-    <!--Profile-->
-    <div id="intro">
-        <h3>#About Me</h3>
-        <p>Hello World, My name is Mayur, I am a BCA student at GFGC Thenkanidiyoor. I'm intrested in coding and solving
-            problems.</p>
-    </div>
-    <!--Knowledge-->
-    <div id="knowledge">
-        <h3>#Languages</h3>
-        <div>Java</div>
-        <div>C</div>
-        <div>C++</div>
-        <div>HTML</div>
-        <div>CSS</div>
-        <div>Java Script</div>
-        <div>C#</div>
+    <!--About-->
+    <div id="about">
+        <h3>About Me</h3>
+        <p>Hi, I'm a programmer. I have experience in HTML, CSS, JavaScript, and java. I enjoy solving complex problems.
+        </p>
     </div>
     <!--Skills-->
     <div id="skills">
-        <h3>#Intrested in</h3>
-        <div>Web Design</div>
-        <div>Back-end</div>
-        <div>Problem solving</div>
+        <h3>Skills</h3>
+        <ul>
+            <li>Frontend</li>
+            <li>Backend</li>
+        </ul>
     </div>
     <!--Contact-->
     <div id="contact">
-        <h3>Follow Me Here</h3>
-        <a href="https://github.com/Mayur68">Mayur68</a>
-        <a></a>
+        <h3>Get In Touch</h3>
+        <p>Feel free to contact me through email at matthewyou47@gmail.com or through my GitHub account <a
+                href="https://github.com/Mayur68">@Mayur68</a>.</p>
     </div>
 </body>
 
