--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!--Contact-->
     <div id="contact">
         <h3>Get In Touch</h3>
-        <p>Feel free to contact me through my GitHub account <a href="https://github.com/Mayur68">@Mayur68</a>.</p>
+        <p>Feel free to contact me through email mayurpatkar68@gmail.com or through my GitHub account <a href="https://github.com/Mayur68">@Mayur68</a>.</p>
     </div>
 </body>
 
