--- a/index.html
+++ b/index.html
@@ -5,208 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mayur</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            color: white;
-            background-color: rgb(14, 14, 14);
-            transition: background-color 1s ease;
-        }
-
-        body.light-mode {
-            background-color: white;
-            color: black;
-        }
-
-        header {
-            color: inherit;
-            padding: 1rem 2rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            transition: color 1s ease;
-        }
-
-        header h2 {
-            margin: 0;
-        }
-
-        .navigation {
-            display: flex;
-            color: inherit;
-        }
-
-        .navigation div {
-            margin-right: 1rem;
-        }
-
-        .navigation a {
-            color: inherit;
-            text-decoration: none;
-            /* transition: color 1s ease; */
-        }
-
-        .navigation a:hover {
-            color: rgb(95, 0, 191);
-        }
-
-        .intro {
-            width: 80%;
-            margin: auto;
-            display: flex;
-            justify-content: space-around;
-            color: inherit;
-            padding: 2rem;
-            opacity: 0;
-            animation: fadeIn 2s forwards;
-            transition: color 1s ease;
-        }
-
-        /* .intro a{
-            height: 50px;
-            width: 50px;
-            background-color: white;
-        }
-
-        .intro a img{
-            height: 50px;
-            width: 50px;
-        } */
-
-        .frame {
-            position: relative;
-            width: 100%;
-            max-width: 30rem;
-            height: auto;
-            border: none;
-            overflow: hidden;
-            display: inline-block;
-        }
-
-        .frame img {
-            width: 100%;
-            display: block;
-            height: auto;
-            object-fit: cover;
-        }
-
-        .shadow-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            box-shadow: inset 0 -300px 90px -100px rgb(14, 14, 14),
-                inset -100px 0 50px -50px rgb(14, 14, 14),
-                inset 100px 0 50px -50px rgb(14, 14, 14);
-            transition:
-                box-shadow 1s ease,
-                background-color 0.3s ease;
-        }
-
-
-        .shadow-overlay.light-mode {
-            box-shadow: inset 0 -300px 90px -100px white,
-                inset -100px 0 50px -50px white,
-                inset 100px 0 50px -50px white;
-        }
-
-
-        .intro-text {
-            padding-top: 15rem;
-            text-align: center;
-        }
-
-        .icons {
-            height: 25px;
-            width: 25px;
-        }
-
-        .icons img {
-            height: 100%;
-            width: 100%;
-            cursor: pointer;
-            border: black;
-            /* border-radius: 20%; */
-            object-fit: cover;
-        }
-
-        @media (max-width: 48rem) {
-            .frame {
-                max-width: 60%;
-            }
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-
-            to {
-                opacity: 1;
-            }
-        }
-
-        .toggle-container {
-            top: 10px;
-            right: 10px;
-        }
-
-        .toggle-label {
-            position: relative;
-            display: inline-block;
-            width: 60px;
-            height: 20px;
-        }
-
-        .toggle-input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
-
-        .toggle-slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: #ccc;
-            transition: .4s;
-            border-radius: 34px;
-        }
-
-        .toggle-slider:before {
-            position: absolute;
-            content: "";
-            height: 12px;
-            width: 12px;
-            left: 10px;
-            bottom: 4px;
-            background-color: black;
-            transition: .4s;
-            border-radius: 50%;
-        }
-
-        input:checked+.toggle-slider {
-            background-color: rgb(95, 0, 191);
-        }
-
-        input:focus+.toggle-slider {
-            box-shadow: 0 0 1px rgb(95, 0, 191);
-        }
-
-        input:checked+.toggle-slider:before {
-            transform: translateX(26px);
-        }
-
-        .toggle-input {
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -229,7 +28,7 @@
     </header>
     <div class="intro">
         <div class="frame">
-            <img src="./assets/mayur.png" />
+            <img src="./assets/mayur.png" loading="lazy" />
             <div class="shadow-overlay"></div>
         </div>
         <div class="intro-text">
