--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1 style="color: rgb(95, 0, 191);">Hello, I'm Mayur</h1>
             <h4>I am currently a bachelor's student at Mangalore University.</h4>
             <div style="margin: auto; width: 200px; display: flex; justify-content: space-between;">
-                <div class="icons" onclick="github()"><img src="./assets/github.svg" /></div>
+                <div class="icons" onclick="github()"><img src="./assets/github.png" /></div>
                 <div class="icons" onclick="linkedin()"><img src="./assets/linkedin.png"
                         style=" background-color: white;" /></div>
             </div>
