--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="shadow-overlay"></div>
         </div>
         <div class="intro-text">
-            <h1 style="color: rgb(95, 0, 191);">Hello, I'm Mayur</h1>
+            <h1 style="color: rgb(200, 200, 210);">Hello, I'm Mayur</h1>
             <h4>I am currently a bachelor's student at Mangalore University.</h4>
             <div style="margin: auto; width: 200px; display: flex; justify-content: space-between;">
                 <div class="icons" onclick="github()"><img src="./assets/github.png" /></div>
@@ -40,6 +40,9 @@
                         style=" background-color: white;" /></div>
             </div>
         </div>
+    </div>
+    <div style="margin: auto; display: flex; justify-content: center; width: 90%;">
+        <img class="icons" src="./assets/down-arrow.png" loading="lazy" />
     </div>
 
     <script>
