--- a/index.html
+++ b/index.html
@@ -4,42 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mayur</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./mediascreen800px.css">
+    <title>Mayur</title>
 </head>
 
 <body>
-    <header>
+    <header class="desktop">
         <h2>Mayur</h2>
-        <div class="navigation">
-            <div><a href="#education">Education</a></div>
-            <div><a href="#skills">Skills</a></div>
-            <div><a href="#projects">Projects</a></div>
-            <div><a href="#achievement">Achievements</a></div>
-            <div><a href="#contact">Contact</a></div>
+        <ul class="navigation">
+            <li><a href="#education">Education</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#achievement">Achievements</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="toggle-mode">
+            <i class="bi bi-brightness-high-fill" id="toggle-dark"></i>
         </div>
-        <div class="menu-toggle">
-            <i class="fas fa-bars"></i>
-        </div>
-
-        <div class="toggle-container">
-            <label class="toggle-label">
-                <input type="checkbox" class="toggle-input" id="modeToggle">
-                <span class="toggle-slider"></span>
-            </label>
-        </div>
-
     </header>
+    <header id="hamburger-nav">
+        <h2>Mayur</h2>
+        <div class="hamburger-menu">
+            <div class="hamburger-icon" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </header>
+
     <div class="intro">
         <div class="frame">
-            <img src="./assets/mayur.png" loading="lazy" />
+            <img src="./assets/mayur.png" loading="lazy" alt="Mayur's Profile Picture" />
             <div class="shadow-overlay"></div>
         </div>
-        <!-- <div style="margin: auto; display: flex; justify-content: center; width: 2%;">
-            <img class="icons" src="./assets/down-arrow.png" loading="lazy" />
-        </div> -->
         <div class="intro-text">
-            <h1 style="color: rgb(200, 200, 210);">Hello, I'm Mayur</h1>
+            <div class="menu-links"></div>
+            <h1>Hello, I'm Mayur</h1>
             <h4>I am currently a bachelor's student at Mangalore University.</h4>
             <div style="margin: auto; width: 200px; display: flex; justify-content: space-between;">
                 <div class="icons" onclick="github()"><img src="./assets/github.png" /></div>
@@ -48,35 +51,41 @@
             </div>
         </div>
     </div>
-
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script>
-        const menuToggle = document.querySelector('.menu-toggle');
-        const navLinks = document.querySelector('.nav-links ul');
-        const modeToggle = document.getElementById('modeToggle');
-        const shadowOverlay = document.querySelector('.shadow-overlay');
-
-        menuToggle.addEventListener('click', () => {
-            navLinks.classList.toggle('show');
-        });
-
-        function toggleMode() {
-            document.body.classList.toggle('light-mode');
-            shadowOverlay.classList.toggle('light-mode');
-        }
-
-        modeToggle.addEventListener('change', toggleMode);
-
-        function github() {
-            window.open("https://github.com/Mayur68", "_blank");
-        }
-
-        function linkedin() {
-            window.open("https://www.linkedin.com/in/mayura-patkar-14306a2b1/", "_blank");
-        }
-
-    </script>
-
+    <div class="about-text">
+        <div class="menu-links"></div>
+        <h1>About me</h1>
+        <h4>Hello! I'm Mayur, a passionate and dedicated BCA student with a keen interest
+            in programming and technology.<br> Ever since I wrote my first line of code, I've
+            been fascinated by the endless possibilities that technology offers in solving
+            real-world problems.<br> I thrive on challenges and enjoy delving into complex
+            problems to find innovative solutions. As an aspiring programmer,<br> I constantly
+            seek opportunities to expand my knowledge and skills,<br> whether through personal
+            projects, academic coursework,or collaborative initiatives.<br> Outside of
+            coding, I enjoy exploring the latest tech trends, playing sports, and
+            engaging in creative pursuits.<br> I'm excited about the journey ahead and
+            eager to contribute<br> to the ever-evolving field of technology.</h4>
+    </div>
+    <div class="education"></div>
+    <div class="skills"></div>
+    <div class="projects">
+        <h1>Projects By Me</h1>
+        <div class="project-1">
+            <div class="image"></div>
+            <h2>Bitbliss</h2>
+            <p>A webapp by nodeJS, mongodb.</p>
+            <div class="source-code">source-code</div>
+        </div>
+        <div class="project-2">
+            <div class="image"></div>
+            <div class="source-code"></div>
+        </div>
+        <div class="project-3">
+            <div class="image"></div>
+            <div class="source-code"></div>
+        </div>
+    </div>
+    <div class="contact"></div>
 </body>
+<script src="./script.js"></script>
 
 </html>
