--- a/index.html
+++ b/index.html
@@ -94,62 +94,62 @@
 
     <section id="skills">
         <h1 class="title">#Technologies I Know</h1>
-        <div class="experience-details-container">
+        <div class="skills-details-container">
             <div class="about-containers">
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Programming Languages</h2>
+                    <h2 class="skills-sub-title">Programming Languages</h2>
                     <div class="article-container">
                         <article>
                             <div>
-                                <h3>HTML</h3>
+                                <h3>Python</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
                             <div>
-                                <h3>CSS</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <div>
-                                <h3>SASS</h3>
+                                <h3>JAVA</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <div>
                                 <h3>JavaScript</h3>
-                                <p>Basic</p>
+                                <p>Experienced</p>
                             </div>
                         </article>
                         <article>
                             <div>
-                                <h3>TypeScript</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <div>
-                                <h3>Material UI</h3>
+                                <h3>C</h3>
                                 <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <div>
+                                <h3>C++</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <div>
+                                <h3>NodeJS</h3>
+                                <p>Experienced</p>
                             </div>
                         </article>
                     </div>
                 </div>
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Other concepts</h2>
+                    <h2 class="skills-sub-title">Other concepts</h2>
                     <div class="article-container">
                         <article>
                             <div>
-                                <h3>PostgreSQL</h3>
-                                <p>Basic</p>
+                                <h3>Data Structure</h3>
+                                <p>Experienced</p>
                             </div>
                         </article>
                         <article>
                             <div>
-                                <h3>Node JS</h3>
-                                <p>Intermediate</p>
+                                <h3>AI</h3>
+                                <p>Basic</p>
                             </div>
                         </article>
                         <article>
@@ -182,10 +182,12 @@
                     <h2 class="experience-sub-title project-title">BitBliss</h2>
                     <p>A WebApp using NodeJS, MongoDB.</p>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Mayur68/BitBliss--WebApp-'">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/Mayur68/BitBliss--WebApp-'">
                             Github
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://bitbliss.onrender.com'">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://bitbliss.onrender.com'">
                             Live Demo
                         </button>
                     </div>
@@ -194,19 +196,6 @@
                     <div class="article-container">
                     </div>
                     <h2 class="experience-sub-title project-title">Project Two</h2>
-                    <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-                            Github
-                        </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-                            Live Demo
-                        </button>
-                    </div>
-                </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                    </div>
-                    <h2 class="experience-sub-title project-title">Project Three</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                             Github
@@ -234,7 +223,7 @@
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
-                <p><a href="https://www.linkedin.com/in/mayura-patkar-14306a2b1/">X</a></p>
+                <p><a href="https://x.com/mayurpatkar68?t=x81TllvAZ9pmkAUm9z53ag&s=08">X</a></p>
             </div>
         </div>
     </section>
@@ -243,7 +232,7 @@
             <div class="nav-links-container">
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
-                    <li><a href="#experience">Skills</a></li>
+                    <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
