--- a/index.html
+++ b/index.html
@@ -215,14 +215,14 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
-                <p><a href="mailto:mayurpatkar68@gmaul.com">mayurpatkar68@gmaul.com</a></p>
+                <p><a href="mailto:mayurpatkar68@gmaul.com">mayurpatkar68@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
                 <p><a href="https://www.linkedin.com/in/mayura-patkar-14306a2b1/">LinkedIn</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
+                <img src="./assets/X.png" alt="LinkedIn icon" class="icon contact-icon" />
                 <p><a href="https://x.com/mayurpatkar68?t=x81TllvAZ9pmkAUm9z53ag&s=08">X</a></p>
             </div>
         </div>
