--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 </button>
             </div>
             <div id="socials-container">
-                <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
+                <img src="./assets/in.png" alt="My LinkedIn profile" class="icon linkedin-dark-mode"
                     onclick="location.href='https://www.linkedin.com/in/mayura-patkar-14306a2b1/'" />
-                <img src="./assets/github.png" alt="My Github profile" class="icon"
+                <img src="./assets/github2.png" alt="My Github profile" class="icon github-dark-mode"
                     onclick="location.href='https://github.com/Mayur68'" />
             </div>
         </div>
@@ -215,19 +215,20 @@
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
-                <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
+                <img src="./assets/mail.png" alt="Email icon" class="icon contact-icon email-icon email-dark-mode" />
                 <p><a href="mailto:mayurpatkar68@gmaul.com">mayurpatkar68@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
+                <img src="./assets/in.png" alt="LinkedIn icon" class="icon contact-icon linkedin-dark-mode" />
                 <p><a href="https://www.linkedin.com/in/mayura-patkar-14306a2b1/">LinkedIn</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/X.png" alt="LinkedIn icon" class="icon contact-icon" />
+                <img src="./assets/X.png" alt="LinkedIn icon" class="icon contact-icon x-dark-mode" />
                 <p><a href="https://x.com/mayurpatkar68?t=x81TllvAZ9pmkAUm9z53ag&s=08">X</a></p>
             </div>
         </div>
     </section>
+
     <footer>
         <nav>
             <div class="nav-links-container">
