--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div id="socials-container">
                 <img src="./assets/in.png" alt="My LinkedIn profile" class="icon linkedin-dark-mode"
                     onclick="location.href='https://www.linkedin.com/in/mayura-patkar-14306a2b1/'" />
-                <img src="./assets/github2.png" alt="My Github profile" class="icon github-dark-mode"
+                <img src="./assets/github.png" alt="My Github profile" class="icon github-dark-mode"
                     onclick="location.href='https://github.com/Mayur68'" />
             </div>
         </div>
@@ -219,7 +219,7 @@
                 <p><a href="mailto:mayurpatkar68@gmaul.com">mayurpatkar68@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/in.png" alt="LinkedIn icon" class="icon contact-icon linkedin-dark-mode" />
+                <img src="./assets/in.png" alt="LinkedIn icon" class="icon contact-icon linkedin2-dark-mode" />
                 <p><a href="https://www.linkedin.com/in/mayura-patkar-14306a2b1/">LinkedIn</a></p>
             </div>
             <div class="contact-info-container">
