--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
+            <div class="resume">Resume</div>
         </ul>
         <div class="toggle-mode">
             <i class="bi bi-brightness-high-fill" id="toggle-dark"></i>
@@ -45,7 +46,7 @@
             </div>
         </div>
     </nav>
-
+    <div class="go-up" onclick="go_up()"><img src="./assets/angle-up-solid.svg" /></div>
     <section id="profile">
         <div class="frame">
             <img src="./assets/mayur.png" loading="lazy" alt="Mayur's Profile Picture" />
@@ -68,8 +69,6 @@
             </div>
         </div>
     </section>
-
-
     <section id="about">
         <h1 class="title">#About Me</h1>
         <div class="section-container">
@@ -91,8 +90,7 @@
             </div>
         </div>
     </section>
-
-
+    <div class="line"></div>
     <section id="skills">
         <h1 class="title">#Technologies I Know</h1>
         <div class="skills-details-container">
@@ -170,8 +168,7 @@
             </div>
         </div>
     </section>
-
-
+    <div class="line"></div>
     <section id="projects">
         <h1 class="title"># Current Projects</h1>
         <div class="experience-details-container">
@@ -209,8 +206,6 @@
             </div>
         </div>
     </section>
-
-
     <section id="contact">
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
@@ -228,7 +223,6 @@
             </div>
         </div>
     </section>
-
     <footer>
         <nav>
             <div class="nav-links-container">
@@ -242,7 +236,6 @@
         </nav>
         <p>Copyright &#169; 2024 Mayur. All Rights Reserved.</p>
     </footer>
-
 </body>
 <script src="./script.js"></script>
 
