--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
         </div>
     </section>
-    <div class="line"></div>
+    <!-- <div class="line"></div> -->
     <section id="skills">
         <h1 class="title">#Technologies I Know</h1>
         <div class="skills-details-container">
@@ -168,7 +168,7 @@
             </div>
         </div>
     </section>
-    <div class="line"></div>
+    <!-- <div class="line"></div> -->
     <section id="projects">
         <h1 class="title"># Current Projects</h1>
         <div class="experience-details-container">
@@ -192,15 +192,17 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
+                        <img src="./assets/NLmodel.jpg" alt="Project 2" class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <h2 class="experience-sub-title project-title">Shape Recognition model</h2>
+                    <p>A simple NL model and a python server.</p>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Mayur68/Shape-Recognition-model'">
                             Github
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                             Live Demo
-                        </button>
+                        </button> -->
                     </div>
                 </div>
             </div>
